# project-hq

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Package.swift  README.md  build.rs
.codex/environments/: environment.toml
docs/: README.md  Roadmap.md
macos/Assets/: AppIcon.icns
macos/HQDesktop/: HQDesktopApp.swift
script/: build_and_run.sh  make_icon.swift
src/: commands.rs  config.rs  frontmatter.rs  lib.rs  main.rs  mover.rs  project.rs  project_file.rs  web.rs
static/: index.html
tests/: frontmatter_bom_tests.rs  parser_tests.rs  static_index_tests.rs
