[package]
name = "project-hq"
version = "0.1.0"
edition = "2021"
description = "CLI for tracking projects across multiple areas of work and life"
license = "MIT"

[lib]
name = "project_hq"
path = "src/lib.rs"

[[bin]]
name = "hq"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
notify = "7"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3.27.0"
